# rife-android

./: .gitignore  build.gradle  readme.md  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rife_jni.cpp
app/src/main/java/com/rife/android/: MainActivity.kt  RifeEngine.kt
app/src/main/res/values/: strings.xml
